--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "fp-ts": "^2.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "ts-pattern": "^5.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
