--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/inter": "^5.0.13",
     "@mui/joy": "^5.0.0-beta.9",
     "@reduxjs/toolkit": "^1.9.7",
     "fp-ts": "^2.16.1",
