--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fp-ts": "^2.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0",
     "ts-pattern": "^5.0.5"
   },
   "devDependencies": {
